# company-mcp-server

./: LICENSE  README.md  package.json  pyproject.toml
src/: index.ts
src/company_mcp_server/: __init__.py  server.py
