[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "company-mcp-server"
version = "0.1.0"
description = "自社システム用のModel Context Protocol (MCP)サーバー"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Company" }
]
license = { text = "MIT" }
keywords = ["mcp", "model-context-protocol", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mcp[cli]",
]

[project.scripts]
company-mcp-server = "company_mcp_server.server:main"
